# poser

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: docker-image.yml
config/: config_example.toml
migrations/: 20230308182317_session.up.sql
scripts/: gen_keys.sh  migrate.sh
src/: config.rs  error.rs  lib.rs  main.rs  oidc.rs  shutdown.rs  token.rs
src/routes/: auth.rs  callback.rs  login.rs  mod.rs  token.rs
src/token/: claims.rs  local.rs  mod.rs  public.rs
