[package]
name = "poser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
base64 = "0.21"
base64ct = "1.6"
blake2 = "0.10"
chacha20 = "0.9"
getrandom = "0.2"
openidconnect = "2.5"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.4"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.25", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3", "with-uuid-1"] }
tower = "0.4"
tower-cookies = "0.9"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
zeroize = "1.6"

# the current pre-release doesn't compile, so I'm using git for now
[dependencies.ed25519-dalek]
git = "https://github.com/dalek-cryptography/ed25519-dalek.git"
features = ["pem"]

[dev-dependencies]
hex-literal = "0.3"
