[package]
name = "poser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64ct = "1.6"
openidconnect = "3.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3", "with-uuid-1"] }
tower = "0.4"
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

base64 = "0.22"
blake2 = "0.10"
chacha20 = "0.9"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
getrandom = "0.2"
subtle = "2.5"
zeroize = "1.7"

[dev-dependencies]
hex-literal = "0.4"
